--- a/www/css/index.css
+++ b/www/css/index.css
@@ -48,13 +48,13 @@ body {
 /* Portrait layout (default) */
 .app {
     position: relative;             /* position in the center of the screen */
-    width:225px;                   /* text area width */
+    width:250px;                   /* text area width */
     text-align:center;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-input[type="button"]{ min-width: 200px; }
+input[type="button"]{ width: 100%; height: 40px}
 
 
 h1 {
